lots of little fixes, restructured NewConnection so error messages dont extend userInfo component, chat container auto scrolls, users can no longer send messages filled with only white space and ConnectionManager only switches chat view if you close the chat currently being viewed

--- a/public/style.css
+++ b/public/style.css
@@ -753,10 +753,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
 }
